tests/cases/compiler/newNonReferenceType.ts
var a = new any();
var b = new bool(); // error
